--- a/impls.html
+++ b/impls.html
@@ -2,19 +2,23 @@
 layout: default
 title: Implementations
 ---
-<div class='jumbotron'>
-    <h2>Implementations</h2>
-    <p class='lead'>
-        PSV implementation is coming soon, with psv.c as the most current working program.
-    </p>
+
+<div class="jumbotron">
+  <h2>Implementations</h2>
+  <p class="lead">
+    PSV implementation is coming soon, with psv.c as the most current working
+    program.
+  </p>
 </div>
-<hr>
-<div class='row-fluid'>
-    <div class='span4'>
-        <h2 id="c-c">C, C++</h2>
-
-        <p>psv.c is a basic reference C implementation:</p>
-
-        <p><a class="btn" href="https://github.com/psv-format/psv.c">View Details »</a></p>
-    </div>
+<hr />
+<div class="row-fluid">
+  <div class="span4">
+    <h2 id="c-c">C, C++</h2>
+    <p>psv.c is a basic reference C implementation:</p>
+    <p>
+      <a class="btn" href="https://github.com/psv-format/psv.c">
+        View Details »
+      </a>
+    </p>
+  </div>
 </div>
