add key semantic tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ overview: true
   <!-- prettier-ignore -->
   <code class="language-markdown" data-lang="markdown">
 {#personnel}
-| ID [uuidv4] [unique]                 | Name     | Birthday [date] | Occupation        | Country   | Favorite Food |
+| ID       [uuid] [unique] [key] {#id} | Name     | Birthday [date] | Occupation        | Country   | Favorite Food |
 | ------------------------------------ | -------- | --------------- | ----------------- | --------- | ------------- |
 | 0b32a75e-e190-4a71-b0e1-45e0d826584f | Alice    | 1994-05-15      | Software Engineer | USA       | Pizza         |
 | 1e6e3e5a-f6cf-4b30-bc42-5365418604a1 | Bob      | 1989-08-20      | Doctor            | UK        | Sushi         |
